--- a/index.html
+++ b/index.html
@@ -1,29 +1,120 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>Sign In</title>
- <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-	<link href="style.css" rel="stylesheet" type="text/css" />
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<link rel="icon" type="image/png" href="assets/logo.png" />
+	<link rel="stylesheet" href="assets/css/signin.css" />
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js">
+
+	</script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+
+	</script>
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js">
+
+	</script>
+	<script src="//code.jquery.com/jquery-1.11.1.min.js">
+
+	</script>
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
+	<title>TeamLitho | My Account</title>
 </head>
 
 <body>
+	<div class="main">
+		<div class="container">
+			<center>
+				<div class="middle">
+					<div id="login">
+						<form action="/pages/dashboard.html" method="get">
+							<fieldset class="clearfix">
+								<p>
+									<span class="fa fa-user"></span
+                    ><input
+                      name="email"
+                      type="text"
+                      placeholder="Email address"
+                      required
+                      value=""
+                    />
+                  </p>
+                  <!-- JS because of IE support; better: placeholder="Username" -->
+                  <p>
+                    <span class="fa fa-lock"></span
+                    ><input
+                      name="pswd"
+                      type="password"
+                      placeholder="Password"
+                      required
+                      value=""
+                    />
+                  </p>
+                  <!-- JS because of IE support; better: placeholder="Password" -->
 
-	<div id="sign-in-wrapper">
-		<div id="error-msg">
-			<p></p>
-		</div>
-		<p data-l10n-id="welcome_text"></p>
-		<div id="sign-in-form-elements">
-			<input type="email" name="swu-email" id="swu-email" data-l10n-placeholder="email_id" placeholder="email address" autofocus>
-        <input type="password" name="swu-password" id="swu-password" data-l10n-placeholder="password_id" placeholder="password">
+                  <div>
+                    <span
+                      style="
+                        width: 48%;
+                        text-align: left;
+                        display: inline-block;
+                      "
+                      ><a class="small-text" href="#">Forgot password?</a></span
+                    >
+                    <span
+                      style="
+                        width: 50%;
+                        text-align: right;
+                        display: inline-block;
+                      "
+                      ><input onclick="Login()" type="submit" value="Sign In"
+                    /></span>
+                  </div>
+                </fieldset>
+                <div class="clearfix"></div>
+              </form>
+
+              <div class="clearfix"></div>
+            </div>
+            <!-- end login -->
+            <div class="logo">
+              TeamLitho
+
+              <div class="clearfix"></div>
+            </div>
+          </div>
+        </center>
+      </div>
     </div>
 
-    <button type="button" id="swu-sign-in" data-l10n-html="sign_in" class="oversize-btn oversize-btn-with-chevron white-opacity on-bg">Sign In</button>
-	<script src="script.js">
-	</script>
-</body>
+    <script src="js/signin.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
 
+    <script>
+      var firebaseConfig = {
+        apiKey: "AIzaSyA20eFtdIhWl1oqE2_5o2sAtHj5SstdnSI",
+        authDomain: "teamlitho-9ac2b.firebaseapp.com",
+        databaseURL: "https://teamlitho-9ac2b-default-rtdb.firebaseio.com",
+        projectId: "teamlitho-9ac2b",
+        storageBucket: "teamlitho-9ac2b.appspot.com",
+        messagingSenderId: "587633326348",
+        appId: "1:587633326348:web:76b3b93999231788287129",
+        measurementId: "G-RZEMM11TG3"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+
+      var admin = require("firebase-admin");
+
+      var serviceAccount = require("path/to/serviceAccountKey.json");
+
+      admin.initializeApp({
+        credential: admin.credential.cert(serviceAccount),
+        databaseURL: "https://teamlitho-9ac2b-default-rtdb.firebaseio.com"
+      });
+    </script>
+  </body>
 </html>
