--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<center>
 				<div class="middle">
 					<div id="login">
-						<form action="/pages/dashboard.html" method="get">
+						<form action="dashboard.html" method="get">
 							<fieldset class="clearfix">
 								<p>
 									<span class="fa fa-user"></span
