--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<link rel="icon" type="image/png" href="assets/logo.png" />
 	<link rel="stylesheet" href="assets/css/signin.css" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/8.7.1/firebase.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/8.7.1/firebase.js">
+	</script>
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js">
 
 	</script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
@@ -37,9 +38,9 @@
                     ><input
                       name="email"
                       type="text"
-                      placeholder="Email address"
+                      placeholder="Email-address"
                       required
-                      value=""
+                      id="email_id"
                     />
                   </p>
                   <!-- JS because of IE support; better: placeholder="Username" -->
@@ -50,7 +51,7 @@
                       type="password"
                       placeholder="Password"
                       required
-                      value=""
+                      id="password_id"
                     />
                   </p>
                   <!-- JS because of IE support; better: placeholder="Password" -->
@@ -91,13 +92,26 @@
     </div>
 
 
-		<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="/__/firebase/8.7.1/firebase-app.js"></script>
+		 <div id="user_div" class="loggedin-div">
+    <h3>Welcome User</h3>
+    <p id="user_para">Welcome to Firebase web login Example. You're currently logged in.</p>
+    <button onclick="logout()">Logout</button>
+  </div>
 
-
-
-<!-- Initialize Firebase -->
-<script src="/__/firebase/init.js"></script>
+<script> 
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyA20eFtdIhWl1oqE2_5o2sAtHj5SstdnSI",
+  authDomain: "teamlitho-9ac2b.firebaseapp.com",
+  databaseURL: "https://teamlitho-9ac2b-default-rtdb.firebaseio.com",
+  projectId: "teamlitho-9ac2b",
+  storageBucket: "teamlitho-9ac2b.appspot.com",
+  messagingSenderId: "587633326348",
+  appId: "1:587633326348:web:db8f5765f39bca6e287129",
+  measurementId: "G-94X0F7PX5Y"
+};
+firebase.initializeApp(config);
+</script>
 
     <script src="script.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
